# MindMate

./: .gitignore  .gitmodules  AppxManifest.xml  CMakeLists.txt  CONTRIBUTING.md  MindMate.desktop  README.md  flatpak_manifest.yml  icon.rc  io.github.koromelodev.mindmate.desktop  io.github.koromelodev.mindmate.metainfo.xml  org.koromelodev.mindmate.metainfo.xml  org.koromelodev.mindmate.yml  resources.qrc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  deploy.yml  test.yml  testing.yml
headers/: ChatGPT.h  ChatItem.h  ChatSettings.h  ChatSettingsDialog.h  ChatSettingsWidget.h  CodeWidget.h  EditDialog.h  HistoryParser.h  MainWindow.h  MessageWidget.h  NewListWidgetItem.h  NewTextEdit.h  OpenAIChat.h  Settings.h  SettingsWidget.h  ThemeIcon.h  UpdateChecker.h
i18n/: MindMate_ru_RU.ts
import/: CMakeLists.txt
import/QSourceHighliter/: CMakeLists.txt
include/: ChatGPT.h  ChatItem.h  ChatSettingsWidget.h  CodeWidget.h  EditMessageDialog.h  HistoryParser.h  MainWindow.h  MessageWidget.h  NewListWidgetItem.h  OpenAIChat.h  Settings.h  SettingsWidget.h  ThemeIcon.h  UpdateChecker.h
lib/: CMakeLists.txt
lib/QSourceHighliter/: CMakeLists.txt
qmarkdowntextedit/: CMakeLists.txt  markdownhighlighter.cpp  markdownhighlighter.h
resources/: AppxManifest.xml  MindMate.desktop  io.github.koromelodev.mindmate.metainfo.xml  style.css
source/: ChatItem.cpp  ChatSettings.cpp  ChatSettingsDialog.cpp  ChatSettingsWidget.cpp  CodeWidget.cpp  EditDialog.cpp  HistoryParser.cpp  MainWindow.cpp  MessageWidget.cpp  NewTextEdit.cpp  OpenAIChat.cpp  SettingsWidget.cpp  ThemeIcon.cpp  UpdateChecker.cpp  main.cpp
sources/: ChatItem.cpp  ChatSettings.cpp  ChatSettingsDialog.cpp  ChatSettingsWidget.cpp  CodeWidget.cpp  EditDialog.cpp  HistoryParser.cpp  MainWindow.cpp  MessageWidget.cpp  NewListWidgetItem.cpp  NewTextEdit.cpp  OpenAIChat.cpp  Settings.cpp  SettingsWidget.cpp  ThemeIcon.cpp  UpdateChecker.cpp  main.cpp
src/: CMakeLists.txt  ChatGPT.cpp  ChatItem.cpp  ChatSettingsWidget.cpp  CodeWidget.cpp  EditMessageDialog.cpp  HistoryParser.cpp  MainWindow.cpp  MessageWidget.cpp  NewListWidgetItem.cpp  NewTextEdit.cpp  Settings.cpp  SettingsWidget.cpp  ThemeIcon.cpp  UpdateChecker.cpp  main.cpp
src/base/: CMakeLists.txt
src/base/include/: APIKey.h  ChatGPT.h  ChatSettings.h  HistoryParser.h  Settings.h  UpdateChecker.h  UpdateDownloader.h
src/base/src/: APIKey.cpp  ChatGPT.cpp  ChatSettings.cpp  HistoryParser.cpp  Settings.cpp  UpdateChecker.cpp  UpdateDownloader.cpp
src/i18n/: MindMate_ru_RU.ts  ru_ru.ts
src/include/: APIKeyWidget.h  ChatSettingsDialog.h  ChatSettingsWidget.h  CodeWidget.h  EditDialog.h  EditMessageDialog.h  MainWindow.h  MessageListWidget.h  MessageWidget.h  NewQListWidget.h  NewTextEdit.h  PageWidget.h  SearchWidget.h  SettingsWidget.h  SetupDialog.h  Updater.h
src/resources/: resources.qrc
src/src/: APIKeyWidget.cpp  ChatItem.cpp  ChatSettingsDialog.cpp  ChatSettingsWidget.cpp  CodeWidget.cpp  MainWindow.cpp  MessageListWidget.cpp  MessageWidget.cpp  NewQListWidget.cpp  NewTextEdit.cpp  PageWidget.cpp  SearchWidget.cpp  SettingsWidget.cpp  SetupDialog.cpp  Updater.cpp  main.cpp
src/ui/: APIKeyWidget.ui  ChatSettingsDialog.ui  ChatSettingsWidget.ui  CodeWidget.ui  EditMessageDialog.ui  MainWindow.ui  MessageWidget.ui  PageWidget.ui  SearchWidget.ui  SettingsWidget.ui  SetupDialog.ui  Updater.ui
tests/: CMakeLists.txt  main.cpp
tests/base/: ChatGPTTest.cpp  ChatSettingsTest.cpp
tests/src/: MessageWidgetTest.cpp
translations/: MindMate_ru_RU.ts
ui/: ChatItem.ui  ChatSettingsDialog.ui  ChatSettingsWidget.ui  CodeWidget.ui  EditDialog.ui  EditMessageDialog.ui  MainWindow.ui  MessageWidget.ui  NewTextEdit.ui  SettingsWidget.ui
