cmake_minimum_required(VERSION 3.27)
project(QSourceHighliter VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_AUTOMOC True)
set(CMAKE_AUTOUIC True)
set(CMAKE_AUTORCC True)
set(CMAKE_INCLUDE_CURRENT_DIR True)

file(GLOB SOURCE *.cpp)
file(GLOB HEADERS *.h)
set(PROJECT_SOURCES ${SOURCE} ${HEADERS})
add_library(${PROJECT_NAME} STATIC ${PROJECT_SOURCES})

find_package(Qt6 REQUIRED COMPONENTS Widgets)
target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets)
